# hefs-fews-hub

./: .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: docker_publish.yml
docs/: notes.md
libs/: dashboard.desktop
src/hefs_fews_hub/: dashboard_funcs.py  jupyter_server_proxy_config.py  panel_dashboard.py  panel_dashboard_notebook.ipynb  start_dashboard.py
