[tool.poetry]
name = "hefs-fews-hub"
version = "0.1.0"
description = ""
authors = ["Sam Lamont <slamont@rit.org>", "Florian Kluibenschaedl <fkluibenschaedl@rti.org>"]
license = "MIT"
readme = "README.md"


packages = [
    { include = "hefs_fews_hub", from = "src" },
]

include = [
    { path = "src/hefs_fews_hub/images/*.png", format = ["sdist", "wheel"] },
    { path = "src/hefs_fews_hub/geo/*.geojson", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.17"
jupyterlab = "^4.2.5"
ipywidgets = "^8.1.5"
nbstripout = "^0.7.1"

[tool.poetry.group.panel.dependencies]
panel = "^1.5.2"
watchfiles = "^0.24.0"
jupyter-bokeh = "^4.0.5"
ipyleaflet = "^0.19.2"
ipywidgets-bokeh = "^1.6.0"

[tool.poetry.scripts]
start-dashboard = "hefs_fews_hub.start_dashboard:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
